# kolibri-app

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  build_requires.txt  crowdin.yml  kolibri.spec  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build_mac.yml  build_windows.yml  i18n-download.yml  i18n-upload.yml  pr_build.yml  pre-commit.yml
hooks/: pyi_rth_kolibri.py
installer/translations/: update_from_inno_default.py
scripts/: extract_webview2_iids.py  smoke_test_macos.sh
src/kolibri_app/: __init__.py  about_dialog.py  application.py  constants.py  kolibri_plugin.py  kolibri_process.py  server_manager_posix.py  server_manager_windows.py  server_process_windows.py  taskbar_icon.py  view.py  webview2_native.py  windows_registry.py  windows_utils.py
src/kolibri_app/locales/en/LC_MESSAGES/: wxapp.po
tests/: test_kolibri_home_readable.py
